# PDFtoMarkDown

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PARK.md  PHASE_1_2_GUIDE.md  README.md  config.sample.yaml  demo_output.md  install_and_verify.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_config.yaml  simple_test.py  test_complete_workflow.py  test_full_pipeline.py  test_integration_basic.py  test_markdown_generator_basic.py  test_pdf_reader_basic.py  test_text_parser_basic.py  개발_계획서.md  실행_체크리스트.md
.cursor/rules/: cli-and-user-experience.mdc  coding-standards.mdc  pdf-processing-guidelines.mdc  pdf-to-markdown-architecture.mdc
src/pdf_to_markdown/: __init__.py  config.py  converter.py  data_models.py  exceptions.py  main.py  markdown_config.py  markdown_generator.py  pdf_reader.py  performance.py  text_parser.py  text_structures.py  ui_utils.py
test_output/: basic_test.md  github_test.md  sample.md  sample_github.md  sample_기본.md  sample_문서.md  sample_최소.md  table_sample.md  table_sample_github.md  table_sample_기본.md  table_sample_문서.md  table_sample_최소.md
tests/: __init__.py  create_test_pdf.py  test_config.py  test_converter.py  test_dependencies.py  test_markdown_generator.py  test_pdf_reader.py  test_text_parser.py
